# yume

.github/workflows/: android_build.yaml  publish.yaml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  ass_renderer.cpp
app/src/main/java/com/sakurafubuki/yume/: MainActivity.kt  VideoThumbnailDecoder.kt
app/src/main/java/com/sakurafubuki/yume/navigation/: AppNavHost.kt  Screen.kt
app/src/main/java/com/sakurafubuki/yume/navigation3/: ImageNavDisplay.kt  MediaNavDisplay.kt  NavBackStackExt.kt  SettingsNavDisplay.kt  YumeNavKey.kt  YumeNavTransitionSpecs.kt
core/cache/src/main/java/com/sakurafubuki/yume/core/cache/: CacheTimestampStore.kt  ImageCacheManager.kt
core/common/src/main/java/com/sakurafubuki/yume/core/common/: Utils.kt
core/common/src/main/java/com/sakurafubuki/yume/core/common/extensions/: File.kt  SubtitleMatcher.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/cache/: CloudFolderCache.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/di/: NetworkModule.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/mappers/: ToVideoState.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/models/: VideoState.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/openlist/: FsListItemMapper.kt  OpenListApiImpl.kt  OpenListModels.kt  OpenListModule.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/repository/: BitmapSolidColor.kt  LocalCloudVideoMetadataRepository.kt  LocalMediaRepository.kt  MediaRepository.kt  MkvKeyframeExtractor.kt  Mp4KeyframeExtractor.kt  SpriteSheetCache.kt  SpriteSheetGenerator.kt  YuvToBitmapBridge.kt
core/data/src/main/java/com/sakurafubuki/yume/core/data/webdav/: WebDavRepositoryImpl.kt
core/database/schemas/com.sakurafubuki.yume.core.database.MediaDatabase/: 15.json
core/database/src/main/java/com/sakurafubuki/yume/core/database/: DatabaseModule.kt  MediaDatabase.kt
core/model/src/main/java/com/sakurafubuki/yume/core/model/: ApplicationPreferences.kt  PlayerPreferences.kt
core/ui/src/main/res/values/: strings.xml
core/ui/src/main/res/values-zh-rCN/: strings.xml
feature/imagebrowser/: build.gradle.kts
feature/player/: build.gradle.kts
feature/player/src/main/java/com/sakurafubuki/yume/feature/player/: MediaPlayerScreen.kt  PlayerActivity.kt  PlayerViewModel.kt  RefreshRateMatcher.kt
feature/settings/: build.gradle.kts
feature/videopicker/: build.gradle.kts
gradle/: libs.versions.toml
(+48 files in other folders)
